--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,12 +8,15 @@ jobs:
     docker:
       - image: circleci/node:10
     working_directory: ~/repo
-    environment:
-      REPO_BUILD_DIR: ~/repo/build
 
     steps:
       # checkout the repository
       - checkout
+
+      # Log the current branch
+      - run:
+          name: Show current branch
+          command: echo ${CIRCLE_BRANCH}
       
       # Download and cache dependencies
       - restore_cache:
@@ -52,10 +55,10 @@ jobs:
 
       - deploy:
           name: deploy to Production AWS s3
-          working_directory: $REPO_BUILD_DIR
+          working_directory: ~/repo
           command: |
             if [ "${CIRCLE_BRANCH}" = "master" ]; then
-              aws s3 sync $REPO_BUILD_DIR \
+              aws s3 sync ~/repo/build \
               s3://$PRODUCTION_S3_BUCKET_NAME/ --delete
             else
               echo "Not master branch, dry run only"
@@ -63,10 +66,10 @@ jobs:
 
       - deploy:
           name: deploy to staging AWS s3
-          working_directory: $REPO_BUILD_DIR
+          working_directory: ~/repo
           command: |
             if [ "${CIRCLE_BRANCH}" = "staging" ]; then
-              aws s3 sync "build" \
+              aws s3 sync ~/repo/build \
               s3://$STAGING_S3_BUCKET_NAME/ --delete
             else
               echo "Not staging branch, dry run only"
