--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,3 @@
-# Javascript Node CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-javascript/ for more details
-#
 version: 2
 jobs:
   build:
@@ -31,40 +27,16 @@ jobs:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
-
+  test1:
+    working_directory: ~/repo
+    steps:
       # run tests!
       - run: yarn test
 
-      # install aws cli
-      - run: sudo apt-get update && sudo apt-get install -y python-dev
-      - run: sudo curl -O https://bootstrap.pypa.io/get-pip.py
-      - run: sudo python get-pip.py
-      - run: sudo pip install awscli --upgrade
-      - run: aws --version
-
-      - run: aws s3 ls
-
-      # Build react site
-      - run: yarn build
-
-      #/home/circleci/repo/build
-
-      #- run:
-      #  name: test our generated HTML files
-      #  command: 
-
-      - deploy:
-          name: deploy to Production AWS s3
-          working_directory: ~/repo
-          command: |
-            if [ "${CIRCLE_BRANCH}" = "master" ]; then
-              aws s3 sync ~/repo/build \
-              s3://$PRODUCTION_S3_BUCKET_NAME/ --delete
-            else
-              echo "Not master branch, dry run only"
-            fi
-
-      - deploy:
+  staging:
+    working_directory: ~/repo
+    steps:
+    - deploy:
           name: deploy to staging AWS s3
           working_directory: ~/repo
           command: |
@@ -74,3 +46,18 @@ jobs:
             else
               echo "Not staging branch, dry run only"
             fi
+
+workflows:
+  version: 2
+  build-test-and-deploy:
+    jobs:
+      - build
+      - test1:
+          requires:
+            - build
+      - staging:
+          requires:
+            - test1
+      - deploy:
+          requires:
+            - staging
