--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,72 +1,69 @@
+defaults: &defaults
+  #working_directory: ./circleci
+  docker:
+    - image: circleci/node:8
+  #working_directory: ~/repo
+
 version: 2
-jobs:
-  build:
-    docker:
-      - image: circleci/node:10
-    working_directory: ~/repo
-
-    steps:
-      # checkout the repository
-      - checkout
-
-      # Log the current branch
-      - run:
-          name: Show current branch
-          command: echo ${CIRCLE_BRANCH}
-      
-      # Download and cache dependencies
-      - restore_cache:
-          keys:
-            - v1-dependencies-{{ checksum "package.json" }}
-            # fallback to using the latest cache if no exact match is found
-            - v1-dependencies-
-
-      - run: yarn install
-
-      - save_cache:
+  jobs:
+    prepare:
+      <<: *defaults
+      steps:
+        - checkout
+        - run: # Log the current branch
+            name: Show current branch
+            command: echo ${CIRCLE_BRANCH}
+        # Download and cache dependencies
+        - restore_cache:
+            keys:
+              - v1-dependencies-{{ checksum "package.json" }}
+              # fallback to using the latest cache if no exact match is found
+              - v1-dependencies-
+        - run: yarn install
+        - save_cache:
+            paths:
+              - node_modules
+            key: v1-dependencies-{{ checksum "package.json" }}
+        - persist_to_workspace:
+          root: .
           paths:
             - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
-  test1:
-    docker:
-      - image: circleci/node:10
-    working_directory: ~/repo
-    steps:
-      # checkout the repository
-      - checkout
+          
+    testing:
+        <<: *defaults
+        steps:
+          - checkout
+          - attach_workspace:
+              at: .
+          - run: yarn test
 
-      # run tests!
-      - run: yarn test
-
-  staging:
-    docker:
-      - image: circleci/node:10
-    working_directory: ~/repo
-    steps:
-    # checkout the repository
-    - checkout
-    - deploy:
-          name: deploy to staging AWS s3
-          working_directory: ~/repo
-          command: |
-            if [ "${CIRCLE_BRANCH}" = "staging" ]; then
-              aws s3 sync ~/repo/build \
-              s3://$STAGING_S3_BUCKET_NAME/ --delete
-            else
-              echo "Not staging branch, dry run only"
-            fi
+    build:
+      <<: *defaults
+      steps:
+        - checkout
+        - attach_workspace:
+            at: .
+        # Build react site
+        - run: yarn build
+        - persist_to_workspace:
+            root: .
+            paths:
+              - build
 
 workflows:
   version: 2
-  build-test-and-deploy:
-    jobs:
-      - build
-      - test1:
+  build_accept_deploy:
+  jobs:
+      - prepare
+      - testing:
           requires:
+            - prepare
+      - deploy-staging:
+          requires:
+            - testing
             - build
-      - staging:
+
+      - deploy-production:
+          type: approval
           requires:
-            - test1
-      - deploy:
-          requires:
-            - staging
+            - testing
