--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,16 +1,19 @@
-defaults: &defaults
-  #working_directory: ./circleci
-  docker:
-    - image: circleci/node:8
-  #working_directory: ~/repo
-
+# Javascript Node CircleCI 2.0 configuration file
+#
+# Check https://circleci.com/docs/2.0/language-javascript/ for more details
+#
 version: 2
 jobs:
-  prepare:
-    <<: *defaults
+  build:
+    docker:
+      - image: circleci/node:10
+    working_directory: ~/repo
+
     steps:
+      # checkout the repository
       - checkout
-      - run: # Log the current branch
+      # Log the current branch
+      - run:
           name: Show current branch
           command: echo ${CIRCLE_BRANCH}
       # Download and cache dependencies
@@ -24,46 +27,40 @@ jobs:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
-      - persist_to_workspace:
-        root: .
-        paths:
-          - node_modules
-        
-  testing:
-      <<: *defaults
-      steps:
-        - checkout
-        - attach_workspace:
-            at: .
-        - run: yarn test
+      # run tests!
+      - run: yarn test
+      
 
-  build:
-    <<: *defaults
-    steps:
-      - checkout
-      - attach_workspace:
-          at: .
+      # install aws cli
+      - run: sudo apt-get update && sudo apt-get install -y python-dev
+      - run: sudo curl -O https://bootstrap.pypa.io/get-pip.py
+      - run: sudo python get-pip.py
+      - run: sudo pip install awscli --upgrade
+      - run: aws --version
+
+      - run: aws s3 ls
+
       # Build react site
       - run: yarn build
-      - persist_to_workspace:
-          root: .
-          paths:
-            - build
 
-workflows:
-  version: 2
-  build_accept_deploy:
-  jobs:
-      - prepare
-      - testing:
-          requires:
-            - prepare
-      - deploy-staging:
-          requires:
-            - testing
-            - build
+      - deploy:
+          name: deploy to staging AWS s3
+          working_directory: ~/repo
+          command: |
+            if [ "${CIRCLE_BRANCH}" = "staging" ]; then
+              aws s3 sync ~/repo/build \
+              s3://$STAGING_S3_BUCKET_NAME/ --delete
+            else
+              echo "Not staging branch, dry run only"
+            fi
 
-      - deploy-production:
-          type: approval
-          requires:
-            - testing
+      - deploy:
+          name: deploy to Production AWS s3
+          working_directory: ~/repo
+          command: |
+            if [ "${CIRCLE_BRANCH}" = "master" ]; then
+              aws s3 sync ~/repo/build \
+              s3://$PRODUCTION_S3_BUCKET_NAME/ --delete
+            else
+              echo "Not master branch, dry run only"
+            fi
