--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "11.10.0",
+    "node": ">=10.15.2",
     "yarn": "1.13.0"
   },
   "dependencies": {
