--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,8 @@ jobs:
   build:
     docker:
       - image: circleci/node:10
+        environment:
+
     working_directory: ~/repo
 
     steps:
@@ -60,19 +62,8 @@ jobs:
           root: .
           paths:
             - node_modules
-            
-      # install aws cli
-      - run: sudo apt-get update && sudo apt-get install -y python-dev
-      - run: sudo curl -O https://bootstrap.pypa.io/get-pip.py
-      - run: sudo python get-pip.py
-      - run: sudo pip install awscli --upgrade
-      - run: aws --version
 
-      # - run: aws s3 ls
-
-      # Build react site
-      - run: yarn build
-
+      
       - run:
           name: Set Express API
           command: |
@@ -88,6 +79,20 @@ jobs:
               exit 1
             fi;
             echo "Endpoint REACT_APP_API_URL: ${REACT_APP_API_URL}"
+            echo 'export REACT_APP_API_URL=${REACT_APP_API_URL}' >> $BASH_ENV
+            
+      # install aws cli
+      - run: sudo apt-get update && sudo apt-get install -y python-dev
+      - run: sudo curl -O https://bootstrap.pypa.io/get-pip.py
+      - run: sudo python get-pip.py
+      - run: sudo pip install awscli --upgrade
+      - run: aws --version
+
+      # - run: aws s3 ls
+
+      # Build react site
+      - run: yarn build
+
       
       - deploy:
           name: deploy to AWS s3
