--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "affordablehousingregisterclient",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
   "engines": {
     "node": ">=10.15.2",
     "yarn": "1.13.0"
@@ -9,6 +10,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "dotenv": "^6.2.0",
     "react": "^16.8.2",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.2",
@@ -19,6 +21,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+  //  "start": "NODE_ENV='development' react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
