--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "affordablehousingregisterclient",
   "version": "0.1.0",
   "private": true,
-  // "homepage": "./",
   "engines": {
     "node": ">=10.15.2",
     "yarn": "1.13.0"
@@ -21,7 +20,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-  //  "start": "NODE_ENV='development' react-scripts start",
+    "start-dev-mode": "NODE_ENV='development' react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
