--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -80,6 +80,10 @@ jobs:
             fi;
             echo "Endpoint REACT_APP_API_URL: ${REACT_APP_API_URL}"
             echo 'export REACT_APP_API_URL=${REACT_APP_API_URL}' >> $BASH_ENV
+
+      -run:
+          name: "What was my custom environment variable?"
+          command: echo ${REACT_APP_API_URL}
       
       # Build react site
       - run: yarn build
