--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,7 +76,7 @@ jobs:
             if [ "${REACT_APP_API_URL}" == "" ]; then
               exit 1
             fi;
-            echo "Endpoint REACT_APP_API_URL: ${REACT_APP_API_URL}"
+            echo "Endpoint REACT_APP_API_URL: $REACT_APP_API_URL"
             echo 'export REACT_APP_API_URL="${REACT_APP_API_URL}"' >> $BASH_ENV
 
       - run: 
@@ -87,7 +87,7 @@ jobs:
       - run:
           name: "What was my custom environment variable?"
           command: |
-            echo ${REACT_APP_API_URL}
+            echo $REACT_APP_API_URL
             echo ${MY_ENV_VAR}
       
       # Build react site
