--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,7 +85,11 @@ jobs:
             echo 'export MY_ENV_VAR="FOO"' >> $BASH_ENV
 
       #build Dev site
-      - run: yarn start-dev-mode            
+      - run: 
+          name: Build Dev Site
+          command: |
+            yarn start-dev-mode
+            exit 130
 
       - run:
           name: "What was my custom environment variable?"
