--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,8 +77,8 @@ jobs:
               exit 1
             fi;
 
-            run: REACT_APP_API_URL=${APP_API_URL} yarn build  
             echo "Endpoint REACT_APP_API_URL: $APP_API_URL"
+            REACT_APP_API_URL=${APP_API_URL} yarn build  
             # echo 'export REACT_APP_API_URL="${APP_API_URL}"' >> $BASH_ENV
             
       # install aws cli
